.internal/Day-2/exercise-6/article-api.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: article-api

spec:
  defaultBackend:
    service:
      name: "Name of the article service"
      port:
        number: PortOfTheArticleService
